---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.10923                                -
---------------------------------------------
- 2021-05-19                                -
---------------------------------------------
.: WSM: BugFix - Encode category name  (WSM-363)
.: WSM: BugFix - Promotion in invoice is not able to remove (WSM-356)
.: WSM: BugFix - Promotion with empty value (WSM-351)
.: WSM: Task - Open Completion Date in ORder and it will focus on the selected Date (WSM-354)
.: WSM: Task - Back button to close image modal (WSM-365)

- v1.0.10922                                -
---------------------------------------------
- 2021-05-17                                -
---------------------------------------------
.: WSM: Task - Improvement: Profile images for item (WSM-367)
.: WSM: Task - Update scrollbar in store page (WSM-369)

- v1.0.10921                                -
---------------------------------------------
- 2021-05-10                                -
---------------------------------------------
.: WSM: Task: Navigation to all invoices (WSM-345)
.: WSM: Task: Start up wizard to start the invoice feature (WSM-344)

- v1.0.1092                                 -
---------------------------------------------
- 2021-05-09                                -
---------------------------------------------
.: WSM: Task: Group completed invoices (WSM-339)

---------------------------------------------
- 2021-05-08                                -
---------------------------------------------
.: WSM: Task: Update invoice-setup to show check (WSM-232)
.: WSM: Task: Add payment method message (WSM-232)

---------------------------------------------
- 2021-05-06                                -
---------------------------------------------
.: WSM: Task: Pre-order through local website or link to other website (WSM-232)
