@@ -268,7 +268,7 @@ export class WsFormBuilder {
             completedAt: [''],
             paymentMethod: [''],
             itemPrice: ['', [Validators.pattern("^[0-9.,]+$")]],
-            itemQuantity: ['', [Validators.pattern("^[0-9]+$")]],
+            itemQuantity: [1, [Validators.pattern("^[0-9]+$")]],
             status: ['new', Validators.required],
             remark: ['', Validators.maxLength(300)]
         }, {
