@@ -66,7 +66,7 @@
                 <div class="p-lg-3 py-3">
                     <div class="border rounded mb-3 p-3">
                         <label id="paymentMethod" class="mb-0 font-9">Catalogue:</label>
-                        <mat-select class="form-control form-control-sm mb-3" [disabled]="!isEditable()" (selectionChange)="getItems($event.value)">
+                        <mat-select class="form-control form-control-sm mb-2" [disabled]="!isEditable()" (selectionChange)="getItems($event.value)">
                             <mat-option [value]="category.id" *ngFor="let category of categories">{{ category?.name }}</mat-option>
                             <mat-option [value]="'uncategorized'">Uncategorized</mat-option>
                         </mat-select>
@@ -76,17 +76,21 @@
                         <mat-select for="itemtype" class="form-control form-control-sm mb-2" formControlName="itemType" (selectionChange)="selectItemType($event.value)">
                             <mat-option [value]="itemType" *ngFor="let itemType of itemTypes">{{itemType.name}}</mat-option>
                         </mat-select>
-                        <div class="row no-gutters mb-2">
-                            <div class="col-lg-6 pr-lg-2">
+                        <div class="row no-gutters mb-3">
+                            <div class="col pr-lg-2">
                                 <label id="price" class="mb-0 font-9">Price: </label>
                                 <div class="position-relative">
                                     <a *ngIf="form.controls['itemType'].value" (click)="setDefaultPrice()" href="javascript:void(0)" class="position-absolute font-9" style="right: 8px; top: 5px; z-index: 99;">Set default</a>
                                     <input for="price" class="form-control form-control-sm" style="padding-right: 5.25rem" formControlName="itemPrice" />
                                 </div>
                             </div>
-                            <div class="col-lg-6 mt-2 mt-lg-0">
+                            <div class="col-auto mt-2 mt-lg-0">
                                 <label id="quantity" class="mb-0 font-9">Quantity: </label>
-                                <input for="quantity" class="form-control form-control-sm" formControlName="itemQuantity" />
+                                <div class="invoice__quantity row no-gutters w-100 align-items-center">
+                                    <span class="invoice__quantity-decrease btn btn-controller btn-sm fas fa-minus mr-1 clickable" (click)="decrease()"></span>
+                                    <input class="invoice__quantity-input text-center form-control form-control-sm" type="number" formControlName="itemQuantity" (change)="quantityChange()" />
+                                    <span class="invoice__quantity-increase btn btn-controller btn-sm fas fa-plus ml-1 clickable" (click)="increase()"></span>
+                                </div>
                             </div>
                         </div>
                         <div>
@@ -217,13 +221,19 @@
             </mat-tab>
             <mat-tab label="Promotion">
                 <div class="p-lg-3 py-3">
-                    <div class="input-group">
-                        <mat-select class="form-control form-control-sm" placeholder="Promotion" (selectionChange)="notifyCalculation()" formControlName="promotion">
-                            <mat-option [value]="''">No promotion</mat-option>
-                            <mat-option [value]="promotion._id" *ngFor="let promotion of promotions">{{ promotion.title }}</mat-option>
-                        </mat-select>
-                        <div class="input-group-append" *ngIf="form.controls['promotion'].value !== '' && selectedPromotion?.option == 'fixed_amount'">
-                            <input formControlName="numberOfPromotion" (change)="notifyCalculation()" type="number" class="form-control form-control-sm" style="border-radius: 0 .2rem .2rem 0" max="10" min="1" />
+                    <div class="row no-gutters">
+                        <div class="col">
+                            <mat-select class="form-control form-control-sm" placeholder="Promotion" (selectionChange)="notifyCalculation()" formControlName="promotion">
+                                <mat-option [value]="''">No promotion</mat-option>
+                                <mat-option [value]="promotion._id" *ngFor="let promotion of promotions">{{ promotion.title }}</mat-option>
+                            </mat-select>
+                        </div>
+                        <div class="col-auto">
+                            <div class="invoice__quantity mx-2 row no-gutters w-100 align-items-center" *ngIf="form.controls['promotion'].value !== '' && selectedPromotion?.option == 'fixed_amount'">
+                                <span class="invoice__quantity-decrease btn btn-controller btn-sm fas fa-minus mr-1 clickable" (click)="promotionDecrease()"></span>
+                                <input class="invoice__quantity-input text-center form-control form-control-sm" type="number" formControlName="numberOfPromotion" (change)="promotionChange()" />
+                                <span class="invoice__quantity-increase btn btn-controller btn-sm fas fa-plus ml-1 clickable" (click)="promotionIncrease()"></span>
+                            </div>
                         </div>
                     </div>
                 </div>
