@@ -4,13 +4,18 @@
 
 - v1.0.10923                                -
 ---------------------------------------------
+- 2021-05-20                                -
+---------------------------------------------
+.: WSM: Task - Back button to close image modal (WSM-365)
+.: WSM: Task - Change create order quantity input to button (WSM-338)
+
+---------------------------------------------
 - 2021-05-19                                -
 ---------------------------------------------
 .: WSM: BugFix - Encode category name  (WSM-363)
 .: WSM: BugFix - Promotion in invoice is not able to remove (WSM-356)
 .: WSM: BugFix - Promotion with empty value (WSM-351)
 .: WSM: Task - Open Completion Date in ORder and it will focus on the selected Date (WSM-354)
-.: WSM: Task - Back button to close image modal (WSM-365)
 
 - v1.0.10922                                -
 ---------------------------------------------
